Fixes profile page spacing

--- a/index.css
+++ b/index.css
@@ -96,21 +96,6 @@ a {
   margin: 2rem;
   text-align: center;
 }
-@media (min-width: 900px) {
-  h1 {
-    font-size: 3rem;
-  }
-  h2 {
-    font-size: 2rem;
-  }
-  h3 {
-    font-size: 1.5rem;
-  }
-  p,
-  a {
-    font-size: 1rem;
-  }
-}
 @media (max-height: 600px) {
   .hide {
     display: none;
