--- a/styles/contact.css
+++ b/styles/contact.css
@@ -3,13 +3,13 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  gap: 2rem;
 }
 .contact-info-upper-container {
   display: flex;
   justify-content: center;
   border-radius: 2rem;
   background: #fafafa;
-  margin: 2rem auto;
 }
 .contact-info-container {
   display: flex;
