--- a/styles/profile.css
+++ b/styles/profile.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 5rem;
   gap: 2rem;
 }
 .profile-info-container {
@@ -36,8 +37,8 @@
     gap: 8rem;
   }
   .profile-pic {
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
   }
   .profile-info-container {
     gap: 1.5rem;
