--- a/styles/projects.css
+++ b/styles/projects.css
@@ -6,7 +6,7 @@
   border-radius: 2rem;
   gap: 1rem;
   max-width: 90%;
-  margin-bottom: 2rem;
+  margin-bottom: 5rem;
 }
 .project-container {
   display: flex;
@@ -21,7 +21,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 .btn-container {
   display: flex;
@@ -43,7 +43,7 @@
   font-weight: 800;
   font-family: "M PLUS Rounded 1c", sans-serif;
   transition: background 300ms ease, border-color 300ms ease, color 300ms ease;
-  padding: 0.5rem;
+  padding: 0.25rem;
   width: 4rem;
   border-radius: 2rem;
 }
